# EMMA

./: .gitignore  Directory.Build.targets  EMMA.sln  Program.cs  README.md
.github/instructions/: emma-cli-ai.instructions.md  project.instructions.md
.github/workflows/: aot-validate.yml  ci.yml  publish-nuget.yml  publish-release-assets.yml  warm-rust-release-caches.yml
Properties/: launchSettings.json
Protos/: greet.proto
Services/: GreeterService.cs
docs/architecture/: adr-0001-hybrid-plugin-runtime-for-ios-post-deploy-pluggability.md  completion-todos.md  implementation-roadmap.md  ios-viable-targeting-solution.md  media-pipeline-design.md  milestone-1-core-runtime.md  milestone-3-first-paged-media-plugin.md  milestone-4-video-support.md  milestone-5-api-surface.md  milestone-6-hardening-and-sandboxing.md  milestone-7-plugin-developer-experience.md  plugin-scaffold-workflow.md  plugin-sdk-authoring-surface.md  plugin-sdk-v0.7.0-author-workflow.md  plugin-sdk-v0.7.0-migration-guide.md  plugin-sdk-v0.7.0-package-consumer-validation.md  plugin-sdk-v0.7.0-phase-1-signoff.md  plugin-sdk-v0.7.0-phase-5-signoff.md  plugin-sdk-v0.7.0-release-contract.md  plugin-sdk-v0.7.0-transport-parity-audit.md  plugin-signing-delegated-trust-model.md  plugin-system-design.md  solution-structure.md  storage-strategy.md  system-blueprint.md  tooling-scripts-reference.md
scripts/: analyze_emma_timings.py  build-ios-native-framework.sh  build-wasm-runtime-native.sh  plugin-pack.sh  plugin-validate-manifest.sh  publish-and-sync-all.sh  publish-and-sync-ios-runtime.sh  publish-cli-with-runtime.sh  publish-native-aot.sh  publish-plugin-host.sh  publish-test-plugin.sh  run-plugin-host-with-test-plugin.sh  sync-ios-native-framework-to-emmaui.sh  sync-native-aot-to-emmaui.sh  sync-plugin-host-to-emmaui.sh  sync-test-plugin-to-emmaui.sh  validate-aot.sh
src/EMMA.Api/: EMMA.Api.csproj  EmbeddedRuntime.cs  EmbeddedRuntimeOptions.cs
src/EMMA.Cli/: CLI.md  (+22 more)
src/EMMA.WasmRuntime.Native/: .gitignore  Cargo.toml
src/EMMA.WasmRuntime.Native/src/: lib.rs
src/EMMA.WasmRuntime.Native/wit/: library.wit
(+375 files in other folders)
