[package]
name = "emma_wasm_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "emma_wasm_runtime"
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
wasmtime = { version = "34.0.2", features = ["component-model"] }
wasmtime-wasi = "34.0.2"
wasmtime-wasi-http = "34.0.2"
