[package]
name = "emma_wasm_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "emma_wasm_runtime"
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "time"] }
wasmtime-wasi = "34.0.2"
wasmtime-wasi-http = "34.0.2"
wit-bindgen = "0.33"

[target.'cfg(target_os = "ios")'.dependencies]
wasmtime = { version = "34.0.2", default-features = false, features = ["component-model", "runtime", "std", "pulley", "cranelift"] }

[target.'cfg(not(target_os = "ios"))'.dependencies]
wasmtime = { version = "34.0.2", features = ["component-model"] }

[profile.release-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
